# PersTox-Agent

./: .gitignore  DATA_PACKAGE.md  README.md  pyproject.toml  requirements.txt
config/: kb_sources.json
configs/: llm.json
data/cache/: README.md
data/normalized/: README.md
data/raw/: README.md
docs/: PersTox-Agent_两阶段推理路径与知识库检索设计.md  三个问题的解答.docx  外部检索知识库建设方案.md  外部知识源本地化与API调用策略.md
examples/: run_warfarin_demo.py  warfarin.md
kb_builder/: __init__.py  api_cache.py  downloader.py  manifest.py  normalize.py
results/: 20_drug_analysis.md  20_drug_analysis_zh.md  final_report_warfarin.json
scripts/: download_kb_sources.py  normalize_kb_sources.py  query_api_cache.py
src/pertox_agent/: __init__.py  formatting.py  graph.py  nodes.py  schemas.py  settings.py  state.py
src/pertox_agent/agents/: __init__.py  knowledge_retrieval_agent.py  safety_verifier_agent.py  toxicity_orchestrator_agent.py
src/pertox_agent/kb_builder/: __init__.py  api_cache.py  downloader.py  manifest.py  normalize.py
src/pertox_agent/tools/: README.md  __init__.py
test/: test_kb_sources.py  test_stage1_pipeline.py  test_tools.py
tests/: test_agent_runtime.py  test_kb_sources.py  test_patient_profile.py  test_stage1_pipeline.py  test_stage2_context.py  test_tools.py
tool/: README.md  __init__.py  common.py  drugbank_tool.py
tool/ade_profile/: __init__.py  persade_contextual_retrieval.py  persade_drug_profile.py
tool/mechanism_admet/: __init__.py  admetsar_predict.py  ddi_query.py  drugbank_metabolism_query.py  dti_query.py  mechanism_query.py  pathway_enrich.py
(+28 files in other folders)
